--- a/HackBattle_ERROR/Article.html
+++ b/HackBattle_ERROR/Article.html
@@ -53,7 +53,8 @@
         <div class="text-container">
             <ul id="feed"></ul>
             <script>
-                const RSS_URL = "https://cors-anywhere.herokuapp.com/http://feeds.bbci.co.uk/news/rss.xml"; // Replace with your RSS feed URL
+                const RSS_URL = "https://www.nasa.gov/rss/dyn/breaking_news.rss";
+                // Replace with your RSS feed URL
               
                 async function fetchRSS() {
                   try {
